2007-06-26 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/udm/ipmi-lan-interface-udm.c
	(ipmi_lan_open_session): Call get authentication capabilities with
	configured privilege, not user.

	* libfreeipmi/src/udm/ipmi-lan-interface-udm.c (ipmi_lan_cmd_raw):
	Add forgotten permsgauth support.  Move sequence number increments
	to cleanup section.
	
2007-06-25 Albert Chu <chu11@llnl.gov>

	* common/src/ipmi-sdr-cache-reads.c (GET_UINT_VALUE_BY_KEY,
	_get_uint_value_by_key): New macros/functions.

	* common/src/ipmi-sdr-cache-reads.c
	(sdr_cache_read_repository_info_timestamp): Read 32 bit fields w/
	uint not int.
	
2007-06-20 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/udm/: Remove unused obj_lan_msg_trlr from
	ipmi_device struct.  Re-organize code to follow struct a bit
	better.

	* libfreeipmi/src/udm/ipmi-messaging-support-cmds-udm.c,
	libfreeipmi/include/freeipmi/ipmi-messaging-support-cmds-udm.h
	(ipmi_cmd_close_session): New function.

	* libfreeipmi/src/udm/ipmi-messaging-support-cmds-udm.c,
	libfreeipmi/include/freeipmi/ipmi-messaging-support-cmds-udm.h
	(ipmi_cmd_get_channel_authentication_capabilities,
	ipmi_cmd_get_session_challenge, ipmi_cmd_activate_session,
	ipmi_cmd_set_session_privilege_level): Re-work APIs to be
	consistent with rest of UDM library.
	
	* libfreeipmi/include/freeipmi/udm/ipmi-messaging-support-cmds-udm.h,
	libfreeipmi/src/udm/ipmi-messaging-support-cmds-udm.c
	(ipmi_lan_open_session, ipmi_lan_close_session): Move to
	libfreeipmi/src/udm/ipmi-lan-interface-udm.c.  Re-work to use
	modified new API in ipmi-messaging-support-cmds-udm.[ch].

	* libfreeipmi/include/freeipmi/udm/ipmi-udm.h (ipmi_open_inband,
	ipmi_open_outofband): Add missing parameter name.

	* Fix minor code comment typos.

2007-06-19 Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Follow on fixes from Phil Knirsch's.

	* various doc updates.

	* doc/freeipmi-libraries.txt: New file.

	* freeipmi.spec.in, doc/Makefile.am: Updated for new file.
	